--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="left-side">
         <img src="images/polina-kuzovkova-n88u01vt9rs-unsplash.jpg" alt="Scandinavian Coast">
-        <div>
-            <img src="images/odin-lined.png" alt="Odin Logo">
-            <h1>Odin</h1>
+        <div class="banner">
+            <img class="logo" src="images/odin-lined.png" alt="Odin Logo">
+            <h1 class="title">Odin</h1>
         </div>
-        <p>Photo by Polina Kuzovkova on Unsplash </p>
+        <p class="credit">Photo by Polina Kuzovkova on Unsplash </p>
     </div>
 
     <div>
