Begin creating right side
Only first paragraph is as intended

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
         <p class="credit">Photo by Polina Kuzovkova on Unsplash </p>
     </div>
 
-    <div>
-        <p>This is not a real online service! You know you need something
-            like this in your life to help you realize your deepest dreams.
-            Sign up <em>now</em> to get started.
+    <div class="right-side">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae iste soluta sapiente alias ipsum omnis beatae impedit ullam esse. Maxime neque assumenda minus nulla a consequuntur ipsa optio accusamus commodi.
         </p>
         <p>You <em>know</em> you want to.</p>
 
-        <div class="container">
+        <div class="sign-up-container">
             <h3>Let's do this!</h3>
             <form id="myform" action="" method="post">
                 <div class="form-first-name">
