Style submit button

--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
             </form>
         </div>
 
-        <input type="submit" name="submit" id="submit" form="myform" value="Create Account">
+        <div>
+            <button type="submit" form="myform">Create Account</button>
+        </div>
 
-        <p>Already have an account? <a href="">Log in</a></p>
+
+        <p class="right-side log-in">Already have an account? <a href="" class="log-in">Log in</a></p>
     </div>
 </body>
 </html>
