Style log in section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
             <button type="submit" form="myform">Create Account</button>
         </div>
 
-
-        <p class="right-side log-in">Already have an account? <a href="" class="log-in">Log in</a></p>
+        <p class="log-in">Already have an account? <a href="#">Log in</a></p>
     </div>
 </body>
 </html>
